tut/4wed/a.txt
nocompile.c: In function ‘main’:
nocompile.c:5:5: error: expected ‘;’ before ‘return’
     return 0;
     ^
